# ASD_Classifier

./: .gitignore  CLAUDE.md  README.md  main.py  pyproject.toml
Best_Model/: best_individual_details.csv  best_model_training_log.csv  summary.txt
Genetic_Result/: GA_Results.csv
src/asd_classifier/: __init__.py  augmentation.py  config.py  dataset.py  ga.py  model.py  preprocessing.py  trainer.py  viz.py
