[project]
name = "autismclassification"
version = "0.1.0"
description = "Binary classification of Autism Spectrum Disorder (ASD) vs Typical Controls using GoogLeNet with Genetic Algorithm hyperparameter optimization"
readme = "README.md"
license = { file = "LICENSE" }
requires-python = ">=3.13"
dependencies = [
    "albumentationsx>=2.3.1",
    "deap>=1.4.4",
    "matplotlib>=3.10.9",
    "numpy>=2.4.6",
    "opencv-python>=4.13.0.92",
    "pandas>=3.0.3",
    "scikit-learn>=1.9.0",
    "torch>=2.12.0",
    "torchinfo>=1.8.0",
    "torchmetrics>=1.9.0",
    "torchsummary>=1.5.1",
    "torchvision>=0.27.0",
]

[dependency-groups]
dev = [
    "jupyter>=1.1.1",
    "ruff>=0.15.16",
]

[build-system]
requires = ["uv_build>=0.11.19,<0.12"]
build-backend = "uv_build"

[tool.uv.build-backend]
module-name = "asd_classifier"
module-root = "src"

[tool.uv.sources]
albumentationsx = { git = "https://github.com/albumentations-team/AlbumentationsX" }
